<resources>
    <string name="app_name">FoodRecipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke">Joke</string>

    <!-- Recipes Fragment Strings -->
    <string name="error_textview_text">No Internet Connection.</string>
    <string name="fab_button_description">Fab Button</string>
    <string name="vegan_recipe">vegan</string>

    <!-- Bottom Sheet Strings -->
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="whole30">Whole30</string>
    <string name="primal">Primal</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="diet_type">Diet Type</string>
    <string name="meal_type">Meal Type</string>
    <string name="apply">Apply</string>

    <!-- Search bar Strings -->
    <string name="search_title">Search</string>

    <!-- Overview Fragment Strings -->
    <string name="dairy_free">Dairy free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="description">Description</string>

    <!-- Details Screen Strings -->
    <string name="save_to_favorites">Save to Favorites</string>

    <!-- Favorites Fragment Strings -->
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>

    <!-- Food Joke Fragment Strings -->
    <string name="error">Error</string>
    <string name="share">Share</string>
</resources>