<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".presentation.recipes.bottom_sheet.RecipesBottomSheet">


    <TextView
        android:id="@+id/textViewMealType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollViewMealType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMealType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupMealType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chipMainCourse"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMainCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSideDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAppetizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSalad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBreakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSoup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBeverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSauce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMarinade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFingerfood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerfood"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSnack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDrink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textViewDietType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewMealType" />

    <HorizontalScrollView
        android:id="@+id/scrollViewDietType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDietType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupDietType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chipGlutenFree"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipGlutenFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipKetogenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPescetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPaleo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWhole30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewDietType" />
</androidx.constraintlayout.widget.ConstraintLayout>